Semaforo de botones completado

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,7 +2,8 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
+file.reference.compilerTools-2.3.7.jar=C:\\Users\\franc\\OneDrive - Instituto Tecnol\u00f3gico de Celaya\\TECNM 7\\LYA2\\Librerias\\compilerTools-2.3.7.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Tesoro\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\franc\\AppData\\Roaming\\NetBeans\\19\\build.properties
